# SBERT_JITTOR

./: .gitignore  LICENSE  checkpoints  data  evaluate_v2.py  example.py  hf  hf_model_card_TEMPLATE.md  pyproject.toml  readme.md  requirements.txt  test.py  train_nli.py  train_nli_gpu.py  train_nli_test.py  train_sts_gpu.py
demo/: demo.ipynb  downstream.ipynb  downstream.py  evaluation.ipynb  evaluation.py  fine-tune.ipynb  general_use.ipynb
evaluation/: evaluate.py  evaluate_gpu.py  sts_eval_utils.py
evaluation/sts/: __init__.py  (+4 more)
heads/: __init__.py  classification.py  identity.py  linear.py  losses.py  mlp.py
losses/: __init__.py  complex_softmax_loss.py  losses.py  regression_loss.py  softmax_loss.py  triplet_loss.py
model/: __init__.py  bert_model.py  sbert_model.py
objectve_functions/: classification.py
results/: eval_sroberta-nli-base_20251225_113116.json  eval_sroberta-nli-base_20251225_113403.json  eval_sroberta-nli-base_20251225_114042.json  eval_sroberta-nli-base_20251225_114334.json  eval_sroberta-nli-base_20251225_115341.json  eval_sroberta-nli-base_20251225_121723.json  eval_sroberta-nli-base_20251225_121951.json  eval_sroberta-nli-base_20251225_122443.json  eval_sroberta-nli-base_20251225_123042.json
tokenizer/: roberta_tokenizer.py
training/: __init__.py  train_nli.py  train_nli_test.py  train_sts.py
utils/: __init__.py  check_jittor_cuda.py  checkpoint_utils.py  data_loader.py  download_checkpoints.py  download_data.py  download_tokenizer.py  jittor_batch.py  jittor_utils.py  jt_utils.py  training_utils.py  wandb_ping.py
(+8 files in other folders)
